[gd_scene load_steps=29 format=3 uid="uid://sthynnldqaj8"]

[ext_resource type="Script" path="res://house.gd" id="1_q6ox1"]
[ext_resource type="Texture2D" uid="uid://ohvl6lxv5n36" path="res://ressources/art/image (17).png" id="2_hiysm"]
[ext_resource type="Texture2D" uid="uid://e5j7cudpl5qk" path="res://ressources/art/maison_tmp.png" id="2_kswmr"]
[ext_resource type="Texture2D" uid="uid://bufe5xa478nvo" path="res://ressources/art/pentagram-Sheet.png" id="2_lxnxy"]
[ext_resource type="Texture2D" uid="uid://p1mkus02ofmi" path="res://ressources/art/maison_destroyed_tmp.png" id="3_5xc4c"]
[ext_resource type="AudioStream" uid="uid://bq7dxjkisqv6k" path="res://ressources/sound/explosion.wav" id="5_mnnbb"]
[ext_resource type="AudioStream" uid="uid://djs1b2f1psktg" path="res://ressources/sound/hit.wav" id="6_3mcb5"]
[ext_resource type="AudioStream" uid="uid://c585d3bqlm14j" path="res://ressources/sound/summoning.wav" id="6_ojh2b"]
[ext_resource type="Texture2D" uid="uid://b5okiinngad32" path="res://ressources/art/image (23).png" id="6_wds1e"]
[ext_resource type="Texture2D" uid="uid://bvr3ab8uxb6iv" path="res://ressources/art/image (22).png" id="7_a7vcj"]
[ext_resource type="Texture2D" uid="uid://bwolea1ifhj7j" path="res://ressources/art/explosion.png" id="9_uds01"]
[ext_resource type="FontFile" uid="uid://5348kmef3b1g" path="res://ressources/art/8-BIT WONDER.TTF" id="12_2rhl6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gp2if"]
atlas = ExtResource("2_lxnxy")
region = Rect2(0, 0, 70, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0scc"]
atlas = ExtResource("2_lxnxy")
region = Rect2(70, 0, 70, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_83mj0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp2if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0scc")
}],
"loop": true,
"name": &"magic circle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_0llv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kswmr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5xc4c")
}],
"loop": true,
"name": &"destroyed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vwl0"]
size = Vector2(53, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_1mw83"]
radius = 70.761

[sub_resource type="AtlasTexture" id="AtlasTexture_2b6ty"]
atlas = ExtResource("9_uds01")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e71l1"]
atlas = ExtResource("9_uds01")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdqcj"]
atlas = ExtResource("9_uds01")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbkds"]
atlas = ExtResource("9_uds01")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urfq4"]
atlas = ExtResource("9_uds01")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_566tm"]
atlas = ExtResource("9_uds01")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxhxq"]
atlas = ExtResource("9_uds01")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjpb2"]
atlas = ExtResource("9_uds01")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_myeqk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b6ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e71l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdqcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbkds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urfq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_566tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxhxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjpb2")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ypfb"]
size = Vector2(61.5, 40.5)

[node name="house" type="StaticBody2D" groups=["house"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_q6ox1")

[node name="magic" type="AnimatedSprite2D" parent="."]
position = Vector2(31, 58)
sprite_frames = SubResource("SpriteFrames_83mj0")
animation = &"magic circle"
frame_progress = 0.133655

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(31, 33)
sprite_frames = SubResource("SpriteFrames_0llv8")

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -4096
position = Vector2(-1, 28)
texture = ExtResource("2_hiysm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(30.5, 51.5)
shape = SubResource("RectangleShape2D_2vwl0")
metadata/_edit_group_ = true

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(40, 39)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-9, 13)
shape = SubResource("CircleShape2D_1mw83")

[node name="Timer" type="Timer" parent="."]

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_left = 1.0
offset_top = -10.0
offset_right = 62.0
offset_bottom = 30.0
value = 50.0
texture_under = ExtResource("6_wds1e")
texture_over = ExtResource("6_wds1e")
texture_progress = ExtResource("7_a7vcj")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
position = Vector2(31, 58)
stream = ExtResource("6_ojh2b")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(31, 33)
stream = ExtResource("6_3mcb5")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_mnnbb")

[node name="Shake" type="Timer" parent="."]
wait_time = 0.3

[node name="Smoke" type="AnimatedSprite2D" parent="."]
position = Vector2(29, 30)
sprite_frames = SubResource("SpriteFrames_myeqk")
frame = 7
frame_progress = 1.0

[node name="spellhitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spellhitbox"]
position = Vector2(31.25, 47.75)
shape = SubResource("RectangleShape2D_8ypfb")

[node name="Label" type="Label" parent="."]
offset_left = -94.0
offset_top = 84.0
offset_right = 156.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("12_2rhl6")
theme_override_font_sizes/font_size = 10
text = "Get the necromancer closer
to summon skeletons"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Smoke" to="." method="_on_smoke_animation_finished"]
[connection signal="area_entered" from="spellhitbox" to="." method="_on_spellhitbox_area_entered"]
[connection signal="area_exited" from="spellhitbox" to="." method="_on_spellhitbox_area_exited"]
